# BeeLazy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_checks.sh  start_screen.py
.github/: dependabot.yml
.github/workflows/: main.yml
scripts/: run-all-checks.sh
src/: bee.py  invincible_effect.py  main_screen.py  obstacle.py  start_screen.py
tests/: test_bee.py  test_invincible_effect.py  test_main_screen.py  test_obstacle.py  test_start_screen.py
