[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["manuelboehm <manuel.boehm9892@web.de>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
isort = "^5.10.1"
mypy = "^1.0"
pylint = "^2.16.1"
kivy = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

