[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["manuelboehm <manuel.boehm9892@web.de>"]

[tool.poetry.dependencies]
python = "^3.10.3"
ruff = "^0.9.4"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^1.14"
pylint = "^3.3.3"
kivy = "^2.3.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.pylint.'MESSAGES CONTROL']
disable = "consider-using-max-builtin,consider-using-min-builtin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = [
    "no-member",
    "too-many-instance-attributes",
    "duplicate-code",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

# Regexes for lines to exclude from consideration
exclude_lines = [
    # have to re-enable the standard pragma:
    "pragma: no cover",

    # tests don't hit defensive assertion code:
    "raise NotImplementedError",

    # non-runnable code isn't run during tests:
    "if 0:",
    "if __name__ == .__main__.:",
    "if .*TYPE_CHECKING:",

    # do not measure coverage in platform dependent switches:
    "sys.platform == '",
    "sys.platform in",
]

